--- a/templates/deletemenuitem.html
+++ b/templates/deletemenuitem.html
@@ -4,14 +4,12 @@
 <h2> Are you sure you want to delete {{item.name}}? </h2>
 
 <form action="#" method = 'post'>
-
 	<button type="submit" class="btn btn-default delete" id="submit" type="submit">
 	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</button>
-	<a href = '{{url_for('showRestaurants')}}'>
-		<button class="btn btn-default delete">
-		<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
-	</a>
-
 </form>
+<a href = '{{url_for('showMenu', restaurant_id= item.restaurant_id)}}'>
+	<button class="btn btn-default delete">
+	<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+</a>
 
 {% endblock %}
