--- a/templates/editmenuitem.html
+++ b/templates/editmenuitem.html
@@ -47,12 +47,12 @@
 					</div>
 					<button type="submit" class="btn btn-default" id="submit" type="submit">
 					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Save</button>
-					<a href = '{{url_for('showRestaurants')}}'>
-						<button class="btn btn-default delete">
-						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
-					</a>
 				</div>
 			</form>
+			<a href = '{{url_for('showMenu', restaurant_id=item.restaurant_id)}}'>
+				<button class="btn btn-default delete">
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+			</a>
 		</div>
 	</div>
 {% endblock %}
