--- a/templates/newRestaurant.html
+++ b/templates/newRestaurant.html
@@ -20,6 +20,9 @@
 				<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Create</button>
 				</div>
 			</form>
+			<a href = '{{ url_for('showRestaurants') }}'>
+				<button class="btn btn-default delete">
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
 		</div>
 	</div>
 {% endblock %}
