--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -49,7 +49,10 @@
 					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
 				</div>
 			</form>
+			<a href = '{{ url_for('showMenu', restaurant_id=restaurant_id) }}'>
+				<button class="btn btn-default delete">
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+			</a>
 		</div>
 	</div>
 {% endblock %}
-
